test/pass/frontend/multibyte/test.twge
// OPTION: --print-token
def 測試() : actions {}