test/fail/lexer/syntaxFunDef/test.twge
def a() : unknown {

}

block my_block {
}